--- a/html/browsers/windows/nested-browsing-contexts/test.html
+++ b/html/browsers/windows/nested-browsing-contexts/test.html
@@ -3,5 +3,5 @@
 <title>HTML Test: child browsing context created by the frame element</title>
 <link rel="author" title="Intel" href="http://www.intel.com/" />
 <frameset>
-  <frame id="f1" name="frame"></frame>
+  <frame id="f1" name="frame">
 </frameset>
