--- a/html/semantics/forms/the-input-element/image01.html
+++ b/html/semantics/forms/the-input-element/image01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title>input type file</title>
+<title>input type image</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
 <link rel=help href="http://www.w3.org/html/wg/drafts/html/master/#image-button-state-(type=image)">
 <link rel="match" href="image01-ref.html">
