update group name to test the compatibility caseless algorithm

--- a/html/semantics/forms/the-input-element/radio.html
+++ b/html/semantics/forms/the-input-element/radio.html
@@ -9,8 +9,8 @@
 <input type=radio name=group1 id=radio1>
 <input type=radio name=group1 id=radio2>
 
-<input type=radio name=group2 id=radio3>
-<input type=radio name=GROUP2 id=radio4>
+<input type=radio name=groüp2 id=radio3>
+<input type=radio name=GROÜP2 id=radio4>
 
 <input type=radio id=radio5>
 <input type=radio id=radio6 disabled>
