--- a/html/semantics/forms/the-input-element/radio.html
+++ b/html/semantics/forms/the-input-element/radio.html
@@ -10,7 +10,7 @@
 <input type=radio name=group1 id=radio2>
 
 <input type=radio name=groüp2 id=radio3>
-<input type=radio name=GROÜP2 id=radio4>
+<input type=radio name=groÜp2 id=radio4>
 
 <input type=radio id=radio5>
 <input type=radio id=radio6 disabled>
@@ -47,7 +47,7 @@
     radio4.checked = true;
     assert_false(radio3.checked);
     assert_true(radio4.checked);
-  }, "radio inputs with name attributes group2 and GROUP2 belong to the same radio button group");
+  }, "radio inputs with name attributes groüp2 and groÜp2 belong to the same radio button group");
 
   test(function(){
     assert_false(radio1.checked);
