--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-007.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-007.html
@@ -31,7 +31,7 @@
             float: left;
             width: 200px;
             height: 200px;
-            -webkit-shape-outside: polygon(0px 40px, 120px 40px, 120px 80px, 80px 80px, 80px 120px, 160px 120px, 160px 160px, 0px 160px);
+            shape-outside: polygon(0px 40px, 120px 40px, 120px 80px, 80px 80px, 80px 120px, 160px 120px, 160px 160px, 0px 160px);
         }
         .ref-shape {
             position: absolute;
