--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-009.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-009.html
@@ -35,7 +35,7 @@
             height: 160px;
             padding: 10px;
             border: 10px solid transparent;
-            -webkit-shape-outside: border-box polygon(0% 20%, 60% 20%, 60% 40%, 40% 40%, 40% 60%, 80% 60%, 80% 80%, 0% 80%);
+            shape-outside: border-box polygon(0% 20%, 60% 20%, 60% 40%, 40% 40%, 40% 60%, 80% 60%, 80% 80%, 0% 80%);
         }
         .ref-shape {
             position: absolute;
