--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-011.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-011.html
@@ -35,7 +35,7 @@
             margin: 5px;
             border: 10px solid transparent;
             padding: 5px;
-            -webkit-shape-outside: content-box polygon(0% 20%, 60% 20%, 60% 40%, 40% 40%, 40% 60%, 80% 60%, 80% 80%, 0% 80%);
+            shape-outside: content-box polygon(0% 20%, 60% 20%, 60% 40%, 40% 40%, 40% 60%, 80% 60%, 80% 80%, 0% 80%);
         }
         .ref-shape {
             position: absolute;
