--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-008.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-008.html
@@ -31,7 +31,7 @@
             float: left;
             width: 200px;
             height: 200px;
-            -webkit-shape-outside: polygon(0% 20%, 60% 20%, 60% 40%, 40% 40%, 40% 60%, 80% 60%, 80% 80%, 0% 80%);
+            shape-outside: polygon(0% 20%, 60% 20%, 60% 40%, 40% 40%, 40% 60%, 80% 60%, 80% 80%, 0% 80%);
         }
         .ref-shape {
             position: absolute;
