--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-015.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-015.html
@@ -35,8 +35,8 @@
             margin: 5px;
             border: 10px solid transparent;
             padding: 5px;
-            -webkit-shape-margin: 20px;
-            -webkit-shape-outside: content-box polygon(30% 20%, 100% 20%, 100% 80%, 60% 80%, 60% 70%, 80% 70%, 80% 40%, 30% 40%);
+            shape-margin: 20px;
+            shape-outside: content-box polygon(30% 20%, 100% 20%, 100% 80%, 60% 80%, 60% 70%, 80% 70%, 80% 40%, 30% 40%);
         }
         .ref-shape {
             position: absolute;
