--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-006.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-006.html
@@ -71,8 +71,9 @@
 <body>
     <p>
         The test passes if all there are three green horizontal bars to the right of the
-        triangle that are all inside the rectangle. There should be no red.
-    </p>    
+        triangle that are all inside the rectangle and there should be no green to the left
+        of the triangle. There should be no red.
+    </p>
     <div id="test" class="container">
         <div id="test-float-left"></div>
         XXXXXXX XXXXXXX XXXXXXX
