--- a/IndexedDB/idbcursor_advance_objectstore3.htm
+++ b/IndexedDB/idbcursor_advance_objectstore3.htm
@@ -24,11 +24,10 @@
 
     open_rq.onsuccess = function (event) {
         var txn = db.transaction("store", "readwrite");
-        var objStore = txn.objectStore("store");
-        var rqCursor = objStore.openCursor();
-        rqCursor.onsuccess = t.step_func(function(event) {
+        var rq = txn.objectStore("store").openCursor();
+        rq.onsuccess = t.step_func(function(event) {
             var cursor = event.target.result;
-            assert_cursor_exists(cursor);
+            assert_true(cursor instanceof IDBCursor);
 
             event.target.transaction.abort();
             assert_throws("TransactionInactiveError", function() {
