--- a/custom-elements/resources/x-element.html
+++ b/custom-elements/resources/x-element.html
@@ -5,6 +5,6 @@
     <link rel="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 </head>
 <body>
-    <x-element id="xelement"></x-element>
+    <x-element id="x-element"></x-element>
 </body>
 </html>
