--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/attached-callback-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/attached-callback-test.html
@@ -15,135 +15,101 @@
 <script type="text/javascript">
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     var GeneratedConstructor = doc.registerElement('x-a', {prototype: proto});
-
     var customElement = new GeneratedConstructor();
-    assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
-        'in documents that do not have a browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 0, 'Callback attached ' +
+        'should not be called in documents that do not have a browsing context');
 }, 'Test attached callback if custom element is instantiated via constructor. ' +
     'Document has no browsing context');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-b', {prototype: proto});
-
     doc.body.innerHTML = '<x-b></x-b>';
-    assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
-        'in documents that do not have a browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 0, 'Callback attached ' +
+        'should not be called in documents that do not have a browsing context');
 }, 'Test attached callback if custom element is created via innerHTML property. ' +
     'Document has no browsing context');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
     doc.body.innerHTML = '<x-c></x-c>';
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-c', {prototype: proto});
-    assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
-        'in documents that do not have a browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 0, 'Callback attached ' +
+        'should not be called in documents that do not have a browsing context');
 }, 'Test attached callback if custom element is created via innerHTML property before ' +
     'registration. Document has no browsing context');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
     doc.body.innerHTML = '<x-d id="x-d"></x-d>';
     var customElement = doc.querySelector('#x-d');
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+
+    var proto = newHTMLElementPrototype();
+    var GeneratedConstructor = doc.registerElement('x-d', {prototype: proto});
+
     customElement.constructor.prototype = proto;
-    assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
-        'for unregistered custom element in document without browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 0, 'Callback attached should ' +
+        'not be called for unregistered custom element in document without browsing context');
 }, 'Test attached callback if custom element is unregistered');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
-    assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
-        'in documents with browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 1, 'Callback attached should be ' +
+        'called in documents with browsing context');
 }, 'Test attached callback. Document has browsing context');
 
 
 testInIFrame('../../resources/blank.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
 
     var x = doc.createElement('x-element');
-    assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
-        'before element is added to document with browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 0, 'Callback attached should not ' +
+        'be called before element is added to document with browsing context');
+
     doc.body.appendChild(x);
-    assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
+    assert_equals(proto.attachedCallbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
 }, 'Test attached callback. Registered element is created via document.createElement(). ' +
     'Document has browsing context');
 
 
 testInIFrame('../../resources/blank.html', function(doc) {
-    var callbackCalledCounter = 0;
     var x = doc.createElement('x-element');
     doc.body.appendChild(x);
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
-    assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
-        'in documents with browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 1, 'Callback attached should ' +
+        'be called in documents with browsing context');
 }, 'Test attached callback. Unregistered element is created via document.createElement(). ' +
     'Document has browsing context');
 
 
 testInIFrame('../../resources/blank.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
     doc.body.innerHTML = '<x-element></x-element>';
-    assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
-        'in documents with browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 1, 'Callback attached should ' +
+        'be called in documents with browsing context');
 }, 'Test attached callback. Registered element is created via innerHTML property. ' +
     'Document has browsing context');
 
 
 testInIFrame('../../resources/blank.html', function(doc) {
-    var callbackCalledCounter = 0;
     doc.body.innerHTML = '<x-element></x-element>';
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attachedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
-    assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
-        'in documents with browsing context');
+    assert_equals(proto.attachedCallbackCalledCounter, 1, 'Callback attached should ' +
+        'be called in documents with browsing context');
 }, 'Test attached callback. Unresolved element is created via innerHTML property. ' +
     'Document has browsing context');
 </script>
