--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/attribute-changed-callback-change-attribute-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/attribute-changed-callback-change-attribute-test.html
@@ -16,38 +16,31 @@
 <script type="text/javascript">
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     var GeneratedConstructor = doc.registerElement('x-a', {prototype: proto});
-
     var customElement = new GeneratedConstructor();
+
     customElement.setAttribute('class', 'someClass');
-    callbackCalledCounter = 0;
+    proto.attributeChangedCallbackCalledCounter = 0;
     customElement.setAttribute('class', 'someClass2');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
 }, 'Test attributeChanged callback is called if attribute value is changed by method ' +
     'setAttribute(). The custom element is created via constructor');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackCalledCounter++;
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-b', {prototype: proto});
 
     doc.body.innerHTML = '<x-b id="x-b" class="oldValue"></x-b>';
     var customElement = doc.querySelector('#x-b');
     customElement.setAttribute('class', 'newValue');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
-    assert_array_equals(callbackArgs, ['class', 'oldValue', 'newValue'],
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'oldValue', 'newValue'],
         'Unexpected callback attributeChanged arguments');
 }, 'Test attributeChanged callback arguments if attribute value is changed by method ' +
     'setAttribute(). The custom element is created via innerHTML property');
@@ -55,38 +48,31 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     var GeneratedConstructor = doc.registerElement('x-c', {prototype: proto});
-
     var customElement = new GeneratedConstructor();
+
     customElement.setAttribute('class', 'someClass');
-    callbackCalledCounter = 0;
+    proto.attributeChangedCallbackCalledCounter = 0;
     customElement.classList.add('someClass3');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
 }, 'Test attributeChanged callback is called if attribute value is changed by method ' +
     'classList.add(). The custom element is created via constructor');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackCalledCounter++;
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-d', {prototype: proto});
 
     doc.body.innerHTML = '<x-d id="x-d" class="oldValue"></x-d>';
     var customElement = doc.querySelector('#x-d');
     customElement.classList.add('newestValue');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
-    assert_array_equals(callbackArgs, ['class', 'oldValue', 'oldValue newestValue'],
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'oldValue', 'oldValue newestValue'],
         'Unexpected callback attributeChanged arguments');
 }, 'Test attributeChanged callback arguments if attribute value is changed by method ' +
     'classList.add(). The custom element is created via innerHTML property');
@@ -94,38 +80,31 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     var GeneratedConstructor = doc.registerElement('x-e', {prototype: proto});
-
     var customElement = new GeneratedConstructor();
+
     customElement.setAttribute('class', 'someClass');
-    callbackCalledCounter = 0;
+    proto.attributeChangedCallbackCalledCounter = 0;
     customElement.id = 'someId';
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
 }, 'Test attributeChanged callback is called if attribute value is changed as property. ' +
     'The custom element is created via constructor');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackCalledCounter++;
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-f', {prototype: proto});
 
     doc.body.innerHTML = '<x-f id="x-f" class="oldValue"></x-f>';
     var customElement = doc.querySelector('#x-f');
     customElement.className = 'lastValue';
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
-    assert_array_equals(callbackArgs, ['class', 'oldValue', 'lastValue'],
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'oldValue', 'lastValue'],
         'Unexpected callback attributeChanged arguments');
 }, 'Test attributeChanged callback arguments if attribute value is changed as property. ' +
     'The custom element is created via innerHTML property');
@@ -133,38 +112,31 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     var GeneratedConstructor = doc.registerElement('x-g', {prototype: proto});
-
     var customElement = new GeneratedConstructor();
+
     customElement.setAttribute('class', 'someClass someSuperClass');
-    callbackCalledCounter = 0;
+    proto.attributeChangedCallbackCalledCounter = 0;
     customElement.classList.toggle('someClass');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
 }, 'Test attributeChanged callback is called if attribute value is changed by classList.toggle(). ' +
     'The custom element is created via constructor');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackCalledCounter++;
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-h', {prototype: proto});
 
     doc.body.innerHTML = '<x-h id="x-h" class="oldValue lastValue"></x-h>';
     var customElement = doc.querySelector('#x-h');
     customElement.classList.toggle('lastValue');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
-    assert_array_equals(callbackArgs, ['class', 'oldValue lastValue', 'oldValue'],
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'oldValue lastValue', 'oldValue'],
         'Unexpected callback attributeChanged arguments');
 }, 'Test attributeChanged callback arguments if attribute value is changed by classList.toggle(). ' +
     'The custom element is created via innerHTML property');
@@ -172,95 +144,85 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackCalledCounter++;
-        callbackArgs = [arg1, arg2, arg3];
-    };
     doc.body.innerHTML = '<x-i id="x-i" class="oldValue"></x-i>';
-
     var customElement = doc.querySelector('#x-i');
     customElement.setAttribute('class', 'newValue');
     customElement.setAttribute('class', 'newestValue');
-    assert_equals(callbackCalledCounter, 0, 'Callback attributeChanged should not be called');
 
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-i', {prototype: proto});
+
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 0,
+        'Callback attributeChanged should not be called');
+
     customElement.setAttribute('class', 'rightValue');
-    assert_array_equals(callbackArgs, ['class', 'newestValue', 'rightValue'],
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should not be called');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'newestValue', 'rightValue'],
         'Unexpected callback attributeChanged arguments');
 }, 'Test attributeChanged callback is not called if custom element is not registered');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
 
-    var customElement = doc.querySelector('#xelement');
+    var customElement = doc.querySelector('#x-element');
     customElement.setAttribute('class', 'firstValue');
     customElement.setAttribute('class', 'secondValue');
-    assert_equals(callbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
-        'after call to setAttribute()');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 2, 'Callback ' +
+        'attributeChanged should be called after call to setAttribute()');
 
     customElement.classList.add('someClass3');
-    assert_equals(callbackCalledCounter, 3, 'Callback attributeChanged should be called ' +
-        'after call to classList.add()');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 3, 'Callback ' +
+        'attributeChanged should be called after call to classList.add()');
 
     customElement.id = 'someId';
-    assert_equals(callbackCalledCounter, 4, 'Callback attributeChanged should be called ' +
-        'after changing attribute as property');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 4, 'Callback ' +
+        'attributeChanged should be called after changing attribute as property');
 }, 'Test attributeChanged callback is called if attribute value is changed. ' +
     'The document has browsing context');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
+    var customElement = doc.querySelector('#x-element');
 
-    var customElement = doc.querySelector('#xelement');
     customElement.setAttribute('class', 'firstValue');
     customElement.setAttribute('class', 'secondValue');
-    assert_array_equals(callbackArgs, ['class', 'firstValue', 'secondValue'],
-        'Unexpected callback attributeChanged arguments ' +
-        'after call to setAttribute()');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'firstValue', 'secondValue'],
+        'Unexpected callback attributeChanged arguments after call to setAttribute()');
 
     customElement.classList.add('newestValue');
-    assert_array_equals(callbackArgs, ['class', 'secondValue', 'secondValue newestValue'],
-        'Unexpected callback attributeChanged arguments ' +
-        'after call to classList.add()');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'secondValue', 'secondValue newestValue'],
+        'Unexpected callback attributeChanged arguments after call to classList.add()');
 
     customElement.className = 'lastValue';
-    assert_array_equals(callbackArgs, ['class', 'secondValue newestValue', 'lastValue'],
-        'Unexpected callback attributeChanged arguments ' +
-        'after changing attribute as property');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'secondValue newestValue', 'lastValue'],
+        'Unexpected callback attributeChanged arguments after changing attribute as property');
 }, 'Test attributeChanged callback arguments if attribute value is changed. ' +
     'The document has browsing context');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
-
-    var customElement = doc.querySelector('#xelement');
+    var customElement = doc.querySelector('#x-element');
     customElement.setAttribute('class', 'firstValue');
     customElement.setAttribute('class', 'secondValue');
-    assert_equals(callbackCalledCounter, 0, 'Callback attributeChanged should not be called');
 
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
     customElement.setAttribute('class', 'thirdValue');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called');
+
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1,
+        'Callback attributeChanged should be called');
+    assert_array_equals(proto.attributeChangedCallbackArgs,
+        ['class', 'secondValue', 'thirdValue'],
+        'Unexpected callback attributeChanged arguments after setAttribute() call');
 }, 'Test attributeChanged callback is not called if custom element is not registered. ' +
     'The document has browsing context');
 </script>
