--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/attribute-changed-callback-remove-attribute-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/attribute-changed-callback-remove-attribute-test.html
@@ -15,11 +15,7 @@
 <script type="text/javascript">
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback  = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     var GeneratedConstructor = doc.registerElement('x-a', {prototype: proto});
 
     var customElement = new GeneratedConstructor();
@@ -27,7 +23,7 @@ test(function() {
     customElement.setAttribute('class', 'someClass');
     //attributeChangedCallback should be called the second time here
     customElement.removeAttribute('class');
-    assert_equals(callbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
         'after setAttribute() and removeAttribute() calls');
 }, 'Test attributeChanged callback if attribute is removed. ' +
     'The custom element created via constructor');
@@ -36,12 +32,8 @@ test(function() {
 test(function() {
     var doc = newHTMLDocument();
     HTML5_ELEMENTS.forEach(function(element) {
-        var callbackCalledCounter = 0;
         var obj = doc.createElement(element);
-        var proto = Object.create(obj.constructor.prototype);
-        proto.attributeChangedCallback  = function() {
-            callbackCalledCounter++;
-        };
+        var proto = newCustomElementPrototype(obj.constructor.prototype);
         var GeneratedConstructor = doc.registerElement('x-' + element + '-' + element + '-1', {
             prototype: proto,
             extends: element
@@ -52,7 +44,8 @@ test(function() {
         customElement.setAttribute('class', 'someClass');
         //attributeChangedCallback should be called the second time here
         customElement.removeAttribute('class');
-        assert_equals(callbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
+        assert_equals(proto.attributeChangedCallbackCalledCounter, 2, 
+            'Callback attributeChanged should be called ' +
             'after setAttribute() and removeAttribute() calls for "' + element + '"');
     });
 }, 'Test attributeChanged callback if attribute is removed. ' +
@@ -61,17 +54,14 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-b', {prototype: proto});
 
     doc.body.innerHTML = '<x-b id="x-b" class="theClass"></x-b>';
     var customElement = doc.querySelector('#x-b');
     customElement.removeAttribute('class');
-    assert_equals(callbackCalledCounter, 1, 'Callback attributeChanged should be called ' +
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 1, 
+        'Callback attributeChanged should be called ' +
         'after removeAttribute() call');
 }, 'Test attributeChanged callback if attribute is removed. ' +
     'The custom element created via innerHTML property');
@@ -79,19 +69,17 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-c', {prototype: proto});
 
     doc.body.innerHTML = '<x-c id="x-c" class="theClass"></x-c>';
     var customElement = doc.querySelector('#x-c');
     customElement.removeAttribute('class');
-    assert_equals(callbackArgs[2], null, 'Removing an attribute should invoke ' +
+    assert_equals(proto.attributeChangedCallbackArgs[2], null, 
+        'Removing an attribute should invoke ' +
         'the attributeChanged callback with a null new value');
-    assert_array_equals(callbackArgs, ['class', 'theClass', null],
+    assert_array_equals(proto.attributeChangedCallbackArgs, 
+        ['class', 'theClass', null],
         'Unexpected attributeChanged callback arguments');
 }, 'Test attributeChanged callback arguments if attribute is removed. ' +
     'The custom element created via innerHTML property');
@@ -99,11 +87,7 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
 
     doc.body.innerHTML = '<x-d id="x-d" class="theClass"></x-d>';
     var customElement = doc.querySelector('#x-d');
@@ -111,75 +95,69 @@ test(function() {
     customElement.setAttribute('class', 'someClass');
     // this one should not too
     customElement.removeAttribute('class');
-    assert_equals(callbackCalledCounter, 0, 'Callback attributeChanged should not be called');
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 0, 
+        'Callback attributeChanged should not be called');
 
     doc.registerElement('x-d', {prototype: proto});
     // this call invokes attributeChangedCallback
     customElement.setAttribute('name', 'someName');
     // and this one
     customElement.removeAttribute('name');
-    assert_equals(callbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 2, 
+        'Callback attributeChanged should be called ' +
         'after setAttribute() and removeAttribute() calls');
 }, 'Test attributeChanged callback is not called if attribute is removed. ' +
     'The custom element created via innerHTML property and unresolved at first');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
 
-    var customElement = doc.querySelector('#xelement');
+    var customElement = doc.querySelector('#x-element');
     customElement.setAttribute('class', 'someClass');
     customElement.removeAttribute('class');
-    assert_equals(callbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 2, 
+        'Callback attributeChanged should be called ' +
         'after setAttribute() and removeAttribute() calls');
 }, 'Test attributeChanged callback is called if attribute is removed. ' +
     'The custom element created via constructor and the document has browsing context');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackArgs = [arg1, arg2, arg3];
-    };
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
 
-    doc.body.innerHTML = '<x-element id="xelement" class="theClass"></x-element>';
-    var customElement = doc.querySelector('#xelement');
+    doc.body.innerHTML = '<x-element id="x-element" class="theClass"></x-element>';
+    var customElement = doc.querySelector('#x-element');
     customElement.removeAttribute('class');
-    assert_equals(callbackArgs[2], null, 'Removing an attribute should invoke ' +
+    assert_equals(proto.attributeChangedCallbackArgs[2], null, 
+        'Removing an attribute should invoke ' +
         'the attributeChanged callback with a null new value');
-    assert_array_equals(callbackArgs, ['class', 'theClass', null],
+    assert_array_equals(proto.attributeChangedCallbackArgs, 
+        ['class', 'theClass', null],
         'Unexpected attributeChanged callback arguments');
 }, 'Test attributeChanged callback arguments if attribute is removed. ' +
     'The custom element created via innerHTML property and the document has browsing context');
 
 
 testInIFrame('../../resources/x-element.html', function(doc) {
-    var callbackCalledCounter = 0;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function() {
-        callbackCalledCounter++;
-    };
-
-    var customElement = doc.querySelector('#xelement');
+    var customElement = doc.querySelector('#x-element');
     // this should not call or enqueue attributeChangedCallback
     customElement.setAttribute('name', 'someName');
     // this one too
     customElement.removeAttribute('name');
-    assert_equals(callbackCalledCounter, 0, 'Callback attributeChanged should not be called');
 
+    var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 0, 
+        'Callback attributeChanged should not be called');
     // this call invokes attributeChangedCallback
     customElement.setAttribute('class', 'someClass');
     // this call invokes attributeChangedCallback at second time
     customElement.removeAttribute('class');
-    assert_equals(callbackCalledCounter, 2, 'Callback attributeChanged should be called ' +
+    assert_equals(proto.attributeChangedCallbackCalledCounter, 2, 
+        'Callback attributeChanged should be called ' +
         'after setAttribute() and removeAttribute() calls');
 }, 'Test attributeChanged callback if attribute is removed. ' +
     'The custom element created via innerHTML property and unresolved at first. ' +
