--- a/html/semantics/forms/the-input-element/radio-groupname-case.html
+++ b/html/semantics/forms/the-input-element/radio-groupname-case.html
@@ -56,8 +56,9 @@
                 ["r19", "r20", "r21", "r22", "r23"],
                 ["r24", "r25", "r26", "r27"],
                 ["r28", "r29", "r30", "r31", "r32", "r33", "r34", "r35"],
-                ["r36", "r37"]];
-  groups.forEach(function(group) {
+                ["r36", "r37"]],
+      groupName = ["sImPlE", "paSSfield-killroyß", "глупый", "åωk", "blah1", "tÉdz5アパートFi", "ΣΣ"];
+  groups.forEach(function(group, index) {
     test(function(){
       group.forEach(function(radioId) {
         assert_false(document.getElementById(radioId).checked);
@@ -69,6 +70,6 @@
           if (j != i) assert_false(document.getElementById(group[j]).checked);
         }
       }
-    });
+    }, "radio button group name = " + groupName[index]);
   });
 </script>
